@@ -2,6 +2,10 @@
 CHANGE LOG
 =========================================================================
 
+2011-05-12 Jason Vertrees <Jason.Vertrees@schrodinger.com>
+
+	* more robust space group/pt group reading from maps
+
 2011-05-02 Jason Vertrees <Jason.Vertrees@schrodinger.com>
 
 	* fixed shader bug
